--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
